0033053: Data Exchange, Step Export - Compound with vertex is ignored

Fixed problem with deep compound including with vertex group.