src/STEPControl/STEPControl_ActorWrite.hxx
@@ -117,6 +117,15 @@ private:
   //! bind already written shared faces to STEP entity for non-manifold
   Standard_EXPORT void mergeInfoForNM(const Handle(Transfer_FinderProcess)& theFP, const Handle(Standard_Transient) &theInfo) const;
 
+  //! Gets sequence of vertices of all compounds level by recursive
+  //! @param[in] theShape shape to iterate, checked for compound type and sub shapes vertex type
+  //! @param[out] theVertices sequence of found vertices via recursively iterate of shape
+  //! @return TRUE if one or more vertex was found and all shapes were compound or vertex
+  Standard_Boolean separateShapeToSoloVertex(const TopoDS_Shape& theShape,
+                                             TopTools_SequenceOfShape& theVertices);
+
+
+
   Standard_Integer mygroup;
   Standard_Real mytoler;
   STEPConstruct_ContextTool myContext;
